--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 .font-link {
   font-family: 'Racing Sans One', cursive;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 code {
