--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -2,6 +2,8 @@ img.LP--srcImage {
     width :100%;
     height :100vh;
     display: block;
+    position: absolute;
+    background-attachment: fixed;
   }
 
 div.LP--content {
