--- a/src/RJfoodContentData.css
+++ b/src/RJfoodContentData.css
@@ -134,7 +134,7 @@ h2 {
 
 div.hotelNameDes1 {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 .hotelNameDes1 .ant-card-meta {
@@ -152,6 +152,50 @@ div.hotelNameDes1 {
 
 .hotelNameDes1 .ant-card-meta-description {
     font-size: 20px;
+}
+
+div.quantity {
+    display: flex;
+    justify-content: space-between;
+    width: 8vw;
+    height: 40px;
+    border: 0.5px solid #d4d4d469;
+  }
+
+#minus {
+    display: flex;
+    margin-left: 3px;
+    font-weight: 400;
+    font-size: 40px;
+    margin-top: -19px !important;
+}  
+
+#plus {
+    display: flex;
+    margin-left: 2px;
+    font-weight: 500;
+    font-size: 28px;
+    margin-top: -10px !important;
+}  
+
+.quantity .increment {
+    display: flex;
+    width: 2.5vw;
+}
+
+.increment:hover {
+    background-color: #ffc3c3;
+    cursor: pointer;
+}
+
+.quantity .decrement {
+    display: flex;
+    width: 2.5vw;
+}
+
+.decrement:hover {
+    background-color: #ffc3c3;
+    cursor: pointer;
 }
 
 div.averagePrice2 {
